# Microarchitectural-Hash-Function-Recovery

./: LICENSE  Readme.md
framework/: CMakeLists.txt  README.md
framework/include/: addr.hpp  framework.hpp  oracle.hpp  utils.hpp
framework/src/: addr.cpp  bitwise-framework.cpp  main.cpp  naive-framework.cpp  phys-addr.cpp  virt-addr.cpp
framework/src/oracles/: drama-oracle.cpp  oracle.cpp  slice-oracle.cpp  slice-timing-oracle.cpp  utag-oracle.cpp
minimizer/: Readme.md  limit-bits.py  minimize-groebner.sage  read-and-minimize.py  read-csv.py  setcover.py  test.py  tree.py
